<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_margins"
        android:text="@string/dialog_thank_you_heading"
        android:textAlignment="center"
        android:textSize="@dimen/dialog_text_size"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/massage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dialog_margins"
        android:text="@string/dialog_thank_you_message"
        android:textAlignment="center"
        android:textSize="@dimen/dialog_text_size2" />

    <ImageView
        android:layout_width="@dimen/dialog_image_width_and_height"
        android:layout_height="@dimen/dialog_image_width_and_height"
        android:layout_margin="@dimen/dialog_margins"
        android:contentDescription="@string/dialog_thank_you_image_description"
        android:src="@drawable/ic_treasure_chest" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/doneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:backgroundTint="@color/colorBenefitBlue"
        android:layout_margin="@dimen/dialog_margins"
        android:onClick="doneButton"
        android:text="@string/dialog_done_button_text"
        android:textColor="@color/colorWhite"
        app:cornerRadius="@dimen/default_corner_radius"/>
</LinearLayout>