<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_margin="@dimen/clothing_item_layout_margin"
    app:cardElevation="@dimen/clothing_item_card_elevation">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/image_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/item_layout_bg"
            android:orientation="vertical"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="@dimen/clothing_item_image_width"
                android:layout_height="@dimen/clothing_item_image_height"
                android:contentDescription="@string/clothing_item_image_description" />
        </LinearLayout>

        <TextView
            android:id="@+id/item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/clothing_item_title_padding"
            android:textAlignment="center"
            android:textSize="@dimen/clothing_item_title_text_size"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/edit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_layout"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:theme="@style/Theme.MaterialComponents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="onEditClick"
            android:text="@string/clothing_item_edit_button_text"
            android:textColor="@color/colorBenefitBlue"
            android:textSize="@dimen/clothing_item_edit_button_text_size"
            app:strokeColor="@color/colorBenefitBlue"
            app:cornerRadius="@dimen/default_corner_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/delete_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_layout" />

        <View
            android:id="@+id/button_divider"
            android:layout_width="@dimen/clothing_item_separating_line_width"
            android:layout_height="@dimen/clothing_item_separating_line_height"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/clothing_item_separating_line_margin_top"
            android:layout_marginBottom="@dimen/clothing_item_separating_line_margin_bottom"
            android:background="?android:attr/dividerVertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/delete_button"
            app:layout_constraintStart_toEndOf="@id/edit_button"
            app:layout_constraintTop_toBottomOf="@id/image_layout" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/delete_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:theme="@style/Theme.MaterialComponents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/clothing_item_chat_button_margins"
            android:gravity="center"
            android:text="@string/clothing_item_delete_button"
            android:textColor="@color/colorRed"
            android:textSize="@dimen/clothing_item_edit_button_text_size"
            app:strokeColor="@color/colorRed"
            app:cornerRadius="@dimen/default_corner_radius"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/edit_button"
            app:layout_constraintTop_toBottomOf="@id/image_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>