<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".activities.AllProductsActivity"
    android:layoutDirection="ltr">

    <include
        android:id="@+id/first_page_header"
        layout="@layout/page_header" />


    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_input"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/ic_search_bar"
        app:queryHint="@string/search"
        android:inputType="textPersonName"
        app:layout_constraintHeight_percent="0.054"
        app:layout_constraintTop_toBottomOf="@id/first_page_header"
        app:searchIcon="@drawable/ic_search_bar_icon"
        android:focusable="false"
        app:iconifiedByDefault="false"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/meta_category_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <HorizontalScrollView
        android:id="@+id/metaCategory_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/meta_category_guide">


        <LinearLayout
            android:id="@+id/filter_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


        </LinearLayout>

    </HorizontalScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/filter_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.28" />


    <Button
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:onClick="openFilterPopup"
        android:text="@string/filter"
        android:textSize="20sp"
        android:textColor="#0188b2"
        app:layout_constraintTop_toBottomOf="@id/filter_guide"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        android:elevation="0dp"/>



    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/current_filters_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.38" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/current_filter_guide_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.045" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.028"
        app:layout_constraintLeft_toRightOf="@id/current_filter_guide_vertical"
        app:layout_constraintBottom_toTopOf="@id/current_filters_guide">

        <LinearLayout
            android:id="@+id/current_filters"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categories"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.62"
        android:padding="15dp"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/current_filters_guide"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/no_item_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintTop_toBottomOf="@id/current_filters_guide"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        android:text="@string/no_items_found"
        android:textSize="@dimen/no_items_found_text_size"
        android:visibility="invisible"/>



</androidx.constraintlayout.widget.ConstraintLayout>