<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/all_products"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:layoutDirection="ltr"
    android:orientation="vertical"
    tools:context=".ui.fragments.AllProductsFragment">

    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_input"
        android:layout_width="@dimen/no_hardcode_dimension"
        android:layout_height="@dimen/no_hardcode_dimension"
        android:background="@drawable/ic_search_bar"
        android:focusable="false"
        android:inputType="textPersonName"
        app:iconifiedByDefault="false"
        android:layoutDirection="ltr"
        app:layout_constraintHeight_percent="0.054"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.81"
        app:layout_constraintBottom_toBottomOf="@id/meta_category_guide"
        app:queryHint="@string/search"
        app:searchIcon="@drawable/ic_search_bar_icon" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/meta_category_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <HorizontalScrollView
        android:id="@+id/metaCategory_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/meta_category_guide">


        <LinearLayout
            android:id="@+id/filter_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">


        </LinearLayout>

    </HorizontalScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/filter_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />


    <TextView
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="@dimen/no_elevation"
        android:text="@string/filter"
        android:textColor="@color/colorBenefitBlue"
        android:textSize="@dimen/filters_word_text_size"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/filter_guide" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/current_filters_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/current_filter_guide_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.045" />

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/no_hardcode_dimension"
        app:layout_constraintBottom_toTopOf="@id/current_filters_guide"
        app:layout_constraintHeight_percent="0.028"
        app:layout_constraintLeft_toRightOf="@id/current_filter_guide_vertical">

        <LinearLayout
            android:id="@+id/current_filters"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/categories"
        android:layout_width="match_parent"
        android:layout_height="@dimen/no_hardcode_dimension"
        android:padding="@dimen/recycler_padding"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_filters_guide">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/no_item_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_items_found"
        android:textSize="@dimen/no_items_found_text_size"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_filters_guide"
        app:layout_constraintVertical_chainStyle="spread" />


</androidx.constraintlayout.widget.ConstraintLayout>